@@ -1,5 +1,6 @@
 2010-01-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* photoframe.py: Added support for border color config. (issue #34)
 	* rss.py: Added support for images in <content:encoded>, feed
 	  titles in Photo Source Preferences.
 	* photoimage.py, base.py: Added photo source icons in Tooltips.
